packages/typ/tests/fixtures/diagnostics/0722_fcm_pack_tuple_type_mismatch_07.ml
module type Cell_eta = sig
  type t
  val cell : t
end

module M_eta = struct
  type t = int * int
  let cell = (6, 7)
end

let _ = (module M_eta : Cell_eta with type t = bool * bool)
